fixing display on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 * {
   box-sizing: border-box;
   background-color: #1092e6;
-  
 }
 
 body {
@@ -87,7 +86,7 @@ body {
 .game {
   display: flex;
   flex-direction: row;
-  margin: 100px 340px ;
+  margin: 100px 340px;
 }
 
 .game-info {
@@ -110,14 +109,14 @@ body {
   .game {
     display: flex;
     flex-direction: column;
-    margin: 30px 20px ;
+    margin: 50px 20px;
   }
   .game-info ol {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
     gap: 20px;
     margin-top: 25px;
-    margin-left: -90px;
+    margin-left: -80px;
   }
   .square {
     width: 90px;
